# quantsphere-terminal

./: .gitignore  LICENSE  README.md  app.py  requirements.txt
.github/workflows/: keep-demo-awake.yml
.streamlit/: config.toml
engine/: CMakeLists.txt
engine/include/qs/: iv.hpp  kalman.hpp  mc.hpp  pde.hpp  rng.hpp
engine/src/: bindings.cpp
quantsphere/: __init__.py  _fallback.py  backtest.py  data.py  engine.py  models.py  optimize.py  portfolio.py
quantsphere/snapshots/: AAPL_chain.json
tests/: test_engine.py  test_quant.py
ui/: docs.py  theme.py
